# MO-LW-1

./: CMakeLists.txt  input.txt
MO_LAB1/: CMakeLists.txt  Symplex.cpp  Symplex.h  main.cpp
