# CMakeList.txt: проект CMake для MO_LAB1; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (MO_LAB1 "main.cpp"  "Symplex.h" "Symplex.cpp")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
